--- a/app/src/main/res/layout/direction_pop_up.xml
+++ b/app/src/main/res/layout/direction_pop_up.xml
@@ -49,6 +49,7 @@
         android:layout_marginStart="7dp"
         android:layout_marginTop="51dp"
         android:background="@drawable/edittext_bg"
+        android:enabled="false"
         android:elevation="10dp"
         android:ems="10"
         android:hint="Current Location"
