--- a/app/src/main/res/layout/content_weather_list.xml
+++ b/app/src/main/res/layout/content_weather_list.xml
@@ -1,51 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:focusable="false"
     android:focusableInTouchMode="false"
-    tools:context="com.example.safetravelsclient.WeatherListActivity"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-
-
-
-    <ListView
-        android:id="@+id/content_weather_listing"
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:layout_marginBottom="50dp"
-        android:paddingBottom="10dp"
-
-        android:headerDividersEnabled="false"
-        android:footerDividersEnabled="true"
-        android:divider="@drawable/list_view_divider"
-        android:dividerHeight="3dp"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:background="@color/colorListEntryBG"
-        android:descendantFocusability="blocksDescendants">
-    </ListView>
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.example.safetravelsclient.WeatherListActivity">
 
 
     <Button
         android:id="@+id/back_button_weather_list"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:layout_gravity="bottom|center_horizontal"
         android:layout_below="@+id/content_weather_listing"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
+        android:layout_gravity="bottom|center_horizontal"
 
-        android:layout_marginBottom="50dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/get_directions_button"
-        android:text="Map" />
+        android:text="Map"
+        app:layout_constraintBottom_toBottomOf="@id/content_weather_listing"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/content_weather_listing" />
+
+    <ListView
+        android:id="@+id/content_weather_listing"
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
+        android:background="@color/colorListEntryBG"
+
+        android:descendantFocusability="blocksDescendants"
+        android:divider="@drawable/list_view_divider"
+        android:dividerHeight="3dp"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:footerDividersEnabled="true"
+        android:headerDividersEnabled="false"
+        android:paddingBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"></ListView>
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
